[gd_scene load_steps=12 format=3 uid="uid://dauhpktpyjiqd"]

[ext_resource type="Script" uid="uid://cmf02ekma75sf" path="res://Codes/Game_scene4_in_cabinet_main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bma7n8fubwdem" path="res://Assets/Personages/Yuri_Final.png" id="3"]
[ext_resource type="Texture2D" uid="uid://do5j7hmugy74q" path="res://Assets/Personages/Alisa_final.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ce6wo2q532ti6" path="res://Assets/Personages/Marina_final.png" id="5"]
[ext_resource type="Texture2D" uid="uid://wrj86yp73uai" path="res://Assets/Bg-s/Dialojie.png" id="6"]
[ext_resource type="Script" uid="uid://cma2dye5yqrfh" path="res://Codes/Game_scene4_in_cabinet.gd" id="7"]
[ext_resource type="FontFile" uid="uid://nd838uhky2oy" path="res://Assets/Comic Sans MS.ttf" id="8"]
[ext_resource type="AudioStream" uid="uid://cha4yfb5cowr5" path="res://Assets/Music/Univer_bell.mp3" id="9"]
[ext_resource type="Texture2D" uid="uid://chc4in3ahdfyg" path="res://Assets/Bg-s/bg_menu_mini.png" id="10"]

[sub_resource type="Resource" id="Resource_erkg8"]
metadata/__load_path__ = "res://Assets/Bg-s/in_cabinet.jpg"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18d3g"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2571.0
offset_bottom = 1451.0
texture = SubResource("Resource_erkg8")

[node name="Yuri" type="TextureRect" parent="."]
visible = false
offset_left = 586.0
offset_top = 368.0
offset_right = 1026.0
offset_bottom = 934.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("3")

[node name="Alisa" type="TextureRect" parent="."]
visible = false
offset_left = 1450.0
offset_top = 448.0
offset_right = 2474.0
offset_bottom = 1472.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("4")

[node name="Marina" type="TextureRect" parent="."]
visible = false
offset_left = 544.0
offset_top = 352.0
offset_right = 1568.0
offset_bottom = 1376.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("5")

[node name="DialogueBox" type="TextureRect" parent="."]
offset_left = 700.0
offset_top = 1040.0
offset_right = 1267.0
offset_bottom = 1182.0
scale = Vector2(2.2, 2.2)
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("6")
expand_mode = 1
script = ExtResource("7")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 0
offset_left = 9.0
offset_top = -3.0
offset_right = 575.0
offset_bottom = 187.0
scale = Vector2(0.35, 0.35)

[node name="Name" type="RichTextLabel" parent="DialogueBox/VBoxContainer"]
texture_filter = 6
texture_repeat = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("8")
theme_override_fonts/bold_font = ExtResource("8")
theme_override_fonts/italics_font = ExtResource("8")
theme_override_fonts/bold_italics_font = ExtResource("8")
theme_override_fonts/mono_font = ExtResource("8")
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "Текст"
tab_size = 6
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer5" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 0
offset_left = 17.0
offset_top = 50.0
offset_right = 2653.0
offset_bottom = 473.0
scale = Vector2(0.2, 0.2)

[node name="Text" type="RichTextLabel" parent="DialogueBox/VBoxContainer5"]
custom_minimum_size = Vector2(-1.37, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/text_highlight_h_padding = 6
theme_override_fonts/normal_font = ExtResource("8")
theme_override_font_sizes/normal_font_size = 100
text = "Это крутой текст"
tab_size = 6
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="DialogueBox"]

[node name="Action" type="RichTextLabel" parent="DialogueBox"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.669621
anchor_top = 0.254793
anchor_right = 0.985317
anchor_bottom = 1.41677
theme_override_font_sizes/normal_font_size = 86
text = "aa"
metadata/_edit_use_anchors_ = true

[node name="Timer2" type="Timer" parent="DialogueBox"]

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="DialogueBox"]
stream = ExtResource("9")

[node name="VBoxContainer3" type="VBoxContainer" parent="DialogueBox"]
visible = false
custom_minimum_size = Vector2(14.015, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.536797
anchor_top = -0.0672209
anchor_right = 0.973964
anchor_bottom = 0.239117
offset_left = -4.36362
offset_top = 19.5454
offset_right = 147.762
offset_bottom = 121.045
scale = Vector2(0.3, 0.3)
metadata/_edit_use_anchors_ = true

[node name="Variant1" type="Button" parent="DialogueBox/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Норм"

[node name="VBoxContainer4" type="VBoxContainer" parent="DialogueBox"]
visible = false
custom_minimum_size = Vector2(0.185, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.828122
anchor_top = 0.0704224
anchor_right = 1.04273
anchor_bottom = 0.934735
offset_left = -44.5454
offset_top = 2.57492e-05
offset_right = 233.774
offset_bottom = 22.2676
scale = Vector2(0.3, 0.3)
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Variant11" type="Button" parent="DialogueBox/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Не очень"

[node name="VBoxContainer2" type="VBoxContainer" parent="DialogueBox"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.751346
anchor_top = -4.52023
anchor_right = 1.71779
anchor_bottom = 2.52203
offset_left = 3.05176e-05
offset_right = 71.0
offset_bottom = 31.0
size_flags_vertical = 3

[node name="Variant2" type="Button" parent="DialogueBox/VBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
text = "Выбор1"

[node name="check_Yuri" type="Button" parent="DialogueBox"]
visible = false
layout_mode = 0
offset_left = 532.0
offset_top = 245.0
offset_right = 562.0
offset_bottom = 270.0

[node name="check_Alisa" type="Button" parent="DialogueBox"]
visible = false
layout_mode = 0
offset_left = 485.455
offset_top = 245.455
offset_right = 516.455
offset_bottom = 273.455

[node name="check_Marina" type="Button" parent="DialogueBox"]
visible = false
layout_mode = 0
offset_left = 432.727
offset_top = 248.182
offset_right = 463.727
offset_bottom = 266.182

[node name="In_sc3" type="ColorRect" parent="DialogueBox"]
layout_mode = 0
offset_left = -340.0
offset_top = 200.0
offset_right = 266.0
offset_bottom = 600.0
scale = Vector2(2, 2)
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="Timer" type="Timer" parent="DialogueBox/In_sc3"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 1.0
offset_top = 1.0
offset_right = 68.0
offset_bottom = 62.0
scale = Vector2(2, 2)
size_flags_vertical = 3

[node name="Menu_button" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.560784)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_18d3g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_18d3g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_18d3g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_18d3g")
icon = ExtResource("10")

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = -1597.0
offset_right = 2571.0
offset_bottom = -15.0
color = Color(0.12549, 0.12549, 0.12549, 0.901961)

[node name="Timer1" type="Timer" parent="ColorRect3"]

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 0
offset_left = 1000.0
offset_top = 300.0
offset_right = 1808.0
offset_bottom = 490.0
scale = Vector2(0.6, 0.6)

[node name="continue" type="Button" parent="ColorRect3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 130
text = "Продолжить"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 0
offset_left = 900.0
offset_top = 450.0
offset_right = 2028.0
offset_bottom = 668.0
scale = Vector2(0.6, 0.6)

[node name="save" type="Button" parent="ColorRect3/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 150
text = "Сохранить игру"

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 2
offset_left = 1000.0
offset_top = 650.0
offset_right = 1783.0
offset_bottom = 868.0
scale = Vector2(0.6, 0.6)

[node name="options" type="Button" parent="ColorRect3/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 150
text = "Настройки"

[node name="VBoxContainer4" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 2
offset_left = 1000.0
offset_top = 850.0
offset_right = 1763.0
offset_bottom = 1068.0
scale = Vector2(0.6, 0.6)

[node name="exit" type="Button" parent="ColorRect3/VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 150
text = "Выход"

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -3020.0
offset_top = -3.0
offset_right = -2.0
offset_bottom = 1442.0
color = Color(0.12549, 0.12549, 0.12549, 0.901961)

[node name="Timer1" type="Timer" parent="ColorRect2"]

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 2200.0
offset_top = 250.0
offset_right = 2458.0
offset_bottom = 403.0
scale = Vector2(0.8, 0.8)

[node name="Sound" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 100
text = "Вкл"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 270.0
offset_top = 220.0
offset_right = 655.0
offset_bottom = 467.0
scale = Vector2(0.9, 0.9)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("8")
theme_override_font_sizes/normal_font_size = 140
text = "Звук"

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 1100.0
offset_top = 1000.0
offset_right = 1390.0
offset_bottom = 1149.0
scale = Vector2(0.9, 0.9)

[node name="Sound2" type="Button" parent="ColorRect2/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 100
text = "Назад"

[node name="In_sc2" type="ColorRect" parent="."]
offset_left = -253.0
offset_top = 1472.0
offset_right = 1247.0
offset_bottom = 2295.0
scale = Vector2(2, 2)
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="Timer" type="Timer" parent="In_sc2"]

[connection signal="pressed" from="DialogueBox/VBoxContainer3/Variant1" to="DialogueBox" method="_on_variant_1_pressed"]
[connection signal="pressed" from="DialogueBox/VBoxContainer4/Variant11" to="DialogueBox" method="_on_variant_11_pressed"]
[connection signal="pressed" from="DialogueBox/VBoxContainer2/Variant2" to="DialogueBox" method="_on_variant_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer3/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer4/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer3/Sound2" to="." method="_on_sound_2_pressed"]
